--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,6 +1,32 @@
----
-layout: default
-title: The PHPDevShell Framework
----
 
-<p>Welcome to our new site.</p>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>{{ page.title }}</title>
+    
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
+  
+  </head>
+
+
+  <body>
+    <nav>
+<ul>
+<li><a href="/">Home</a></li>
+<li><a href="/about">About</a></li>
+</ul>
+    </nav>
+<div class="container">
+
+  {{ content }}
+
+</div>
+  
+  <footer>
+   <ul>
+   <li><a href="https://github.com/gregfr/phpdevshell">https://github.com/gregfr/phpdevshell</a></li>
+   </ul>
+  </footer>
+  </body>
+
+</html>
